--- a/app/src/main/res-manager/layout/nav_header_restaurant.xml
+++ b/app/src/main/res-manager/layout/nav_header_restaurant.xml
@@ -10,29 +10,25 @@
     android:paddingTop="@dimen/activity_vertical_margin">
     <!-- android:theme="@style/ThemeOverlay.AppCompat.Dark">
 -->
-
-    <!-- PER ORA NON VIENE MAI USATO (USIAMO SOLO L'HEADER CLIENT),
-        PERCHE' SONO IDENTICI: LOGO - NOME - EMAIL.
-        SE SI VOGLIONO DIFFERENZIARE BISOGNA FARLO NEI VARI LAYOUT
-        E NELLA BASE ACTIVITY QUANDO ANDIAMO A RIEMPIRLI
-      -->
    <ImageView
-         android:id="@+id/nav_drawer_logo"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:paddingTop="@dimen/nav_header_vertical_spacing"
-         android:src="@drawable/ic_account_circle_black_48dp" />
-    <TextView
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:paddingTop="@dimen/nav_header_vertical_spacing"
-         android:id="@+id/nav_drawer_name"
-         android:text="Nome Ristorante"
-         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
-    <TextView
-         android:id="@+id/nav_drawer_email"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:text="email ristorante" />
+        android:id="@+id/nav_drawer_logo"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:gravity="center"
+        android:layout_marginTop="@dimen/nav_header_top_margin"
+        android:src="@drawable/ic_account_circle_black_48dp" />
+   <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/nav_header_top_margin"
+        android:id="@+id/nav_drawer_name"
+        android:text="Nome Ristorante"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+   <TextView
+        android:id="@+id/nav_drawer_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="email ristorante" />
+
 
 </LinearLayout>
