--- a/app/src/main/res/layout/nav_header_client.xml
+++ b/app/src/main/res/layout/nav_header_client.xml
@@ -11,21 +11,22 @@
     <!-- android:theme="@style/ThemeOverlay.AppCompat.Dark">
 -->
    <ImageView
-         android:id="@+id/nav_drawer_logo"
-         android:layout_width="60dp"
-         android:layout_height="60dp"
-         android:paddingTop="@dimen/nav_header_vertical_spacing"
-         android:src="@drawable/ic_account_circle_black_48dp" />
+       android:id="@+id/nav_drawer_logo"
+       android:layout_width="70dp"
+       android:layout_height="70dp"
+       android:gravity="center"
+       android:layout_marginTop="@dimen/nav_header_top_margin"
+       android:src="@drawable/ic_account_circle_black_48dp" />
     <TextView
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:paddingTop="@dimen/nav_header_vertical_spacing"
-         android:id="@+id/nav_drawer_name"
-         android:text="@string/eseguireLogin"
-         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/nav_header_top_margin"
+        android:id="@+id/nav_drawer_name"
+        android:text="@string/eseguireLogin"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
     <TextView
         android:id="@+id/nav_drawer_email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="email client" />
 </LinearLayout>
