--- a/app/src/main/res-manager/layout/activity_main_manager.xml
+++ b/app/src/main/res-manager/layout/activity_main_manager.xml
@@ -13,6 +13,7 @@
         android:id="@+id/topLayout"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:android="http://schemas.android.com/apk/res/android"
+        android:background="@drawable/wood_background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -23,6 +24,8 @@
             android:layout_height="wrap_content"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             android:background="@android:color/transparent">
+
+
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
@@ -31,7 +34,7 @@
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
             android:layout_height="match_parent">
-
+<!--
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
@@ -75,14 +78,15 @@
            </LinearLayout>
 
        </android.support.v7.widget.CardView>
-            <!--<ImageView
+            <ImageView
                 android:layout_width="200dp"
                 android:layout_height="200dp"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:src="@drawable/ic_wip"
-                />-->
-                <android.support.v7.widget.CardView
+                />
+
+            <android.support.v7.widget.CardView
                     xmlns:card_view="http://schemas.android.com/apk/res-auto"
                     card_view:cardCornerRadius="4dp"
                     android:minHeight="64dp"
@@ -118,6 +122,118 @@
                     </LinearLayout>
 
                 </android.support.v7.widget.CardView>
+    -->
+            <HorizontalScrollView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:scrollbars="none"
+                android:id="@+id/horizontalScrollView" >
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:padding="30dp"
+                    android:orientation="vertical"
+                    android:background="@android:drawable/dialog_holo_light_frame"
+                    android:layout_width="300dp"
+                    android:layout_height="400dp">
+                    <TextView
+
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:textStyle="bold"
+                        android:textAppearance="@android:style/TextAppearance.Large"
+                        android:text="@string/new_offer"/>
+                    <ImageView
+                        android:layout_marginTop="10dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="150dp"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/blackboard"
+                        android:layout_gravity="center"
+                        android:cropToPadding="false" />
+
+
+                    <TextView
+                        android:layout_marginTop="10dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textStyle="italic"
+                        android:textAppearance="@android:style/TextAppearance.Medium"
+                        android:text="@string/promo_main"/>
+
+                </LinearLayout>
+                <LinearLayout
+                    android:padding="30dp"
+
+                    android:orientation="vertical"
+                    android:background="@android:drawable/dialog_holo_light_frame"
+                    android:layout_width="300dp"
+                    android:layout_height="400dp">
+                    <TextView
+
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:textStyle="bold"
+                        android:textAppearance="@android:style/TextAppearance.Large"
+                        android:text="@string/go_to_reviews_v2"/>
+                    <ImageView
+                        android:layout_marginTop="10dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="150dp"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/people"
+                        android:layout_gravity="center"
+                        android:cropToPadding="false" />
+
+
+                    <TextView
+                        android:layout_marginTop="10dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textStyle="italic"
+                        android:textAppearance="@android:style/TextAppearance.Medium"
+                        android:text="@string/reviews_main"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:padding="30dp"
+
+                    android:orientation="vertical"
+                    android:background="@android:drawable/dialog_holo_light_frame"
+                    android:layout_width="300dp"
+                    android:layout_height="400dp">
+                    <TextView
+
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:textStyle="bold"
+                        android:textAppearance="@android:style/TextAppearance.Large"
+                        android:text="@string/go_to_photos"/>
+                    <ImageView
+                        android:layout_marginTop="10dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="150dp"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/restaurant_review"
+                        android:layout_gravity="center"
+                        android:cropToPadding="false" />
+
+
+                    <TextView
+                        android:layout_marginTop="10dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textStyle="italic"
+                        android:textAppearance="@android:style/TextAppearance.Medium"
+                        android:text="@string/photos_main"/>
+
+                </LinearLayout>
+    </LinearLayout>
+            </HorizontalScrollView>
 
         </LinearLayout>
         </android.support.v4.widget.NestedScrollView>
