--- a/app/src/main/res-manager/layout/ab_notification_icon.xml
+++ b/app/src/main/res-manager/layout/ab_notification_icon.xml
@@ -24,6 +24,7 @@
         android:layout_width="wrap_content"
         android:minWidth="17sp"
         android:textSize="12sp"
+        android:text="0"
         android:textColor="@android:color/black"
         android:layout_height="wrap_content"
         android:gravity="center"
